# MetaRay

./: .gitignore  .gitmodules  CMakeLists.txt  MetaRay.sln  README.md  premake5.lua
MetaRay/: CMakeLists.txt  MetaRay.vcxproj  MetaRay.vcxproj.filters  image.ppm
MetaRay/src/: Camera.h  Cuda.cu  Cuda.h  CudaCore.cpp  CudaCore.h  Framebuffer.cpp  Framebuffer.h  Hittable.cc  Hittable.cpp  Hittable.cu  Hittable.h  Main.cpp  Main.cu  Material.cu  Material.h  RandomUtil.cpp  RandomUtil.h  Ray.h  Shapes.cc  Shapes.cpp  Shapes.cu  Shapes.h  TimeInstrumentation.cpp  TimeInstrumentation.h  Vec3.h  vec3util.h
bin-int/Debug-windows-x86_64/MetaRay/: CudaCore.asm  Hittable.asm  Main.asm  Main.cu1359472838.deps  MetaRay.exe.recipe  RandomUtil.asm  Shapes.asm  vc142.idb  vc143.idb
bin-int/Debug-windows-x86_64/MetaRay/MetaRay.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  MetaRay.lastbuildstate  MetaRay.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-windows-x86_64/MetaRay/MetaRay.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  MetaRay.lastbuildstate
